styling for the form

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,9 @@
 body{
   margin: 0;
-  padding: 0;
+  padding: 0;  
+}
+*, *::after, *::before{
+  box-sizing: border-box;
 }
 nav.top-sticky-nav{
   display: flex;
@@ -28,7 +31,101 @@ nav.top-sticky-nav a{
 .form-conatiner{
   min-height: 100vh;
   background-image: url("./images/lot-background-photo.png");
-  background-position: center center;
+  background-position: center left;
   background-repeat: no-repeat;
   background-size: cover;
+
+  font-family: 'Lato', sans-serif;
+  padding: 40px;
+}
+.form-conatiner .title{
+  font-size: 2rem;
+  font-weight: 400;
+  color: #fff;
+}
+.form-conatiner .description{
+  max-width: 850px;
+  color: #fff;
+  font-size: 1.2rem;
+  font-weight: 300;
+  margin: 20px 0;
+}
+.form-conatiner form{
+  display: flex;
+  flex-direction: column;
+  max-width: 800px;
+}
+.form-conatiner form input[type='text'],
+.form-conatiner form input[type='number']{
+  margin: 5px 0;
+  padding: 15px 15px;
+  border: none;
+  border-radius: 5px;
+  color: #0957AD;
+}
+.form-conatiner form input[type='text']:focus,
+.form-conatiner form input[type='number']:focus{
+  outline: none;
+}
+.form-conatiner form input[type='text']::placeholder ,
+.form-conatiner form input[type='number']::placeholder {
+  font-weight: 700;
+  color: #0957AD;
+}
+.form-conatiner select#prefix{
+  margin: 5px 0;
+  width: 100%;
+  padding: 15px 15px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-weight: 700;
+}
+.form-conatiner select#prefix:focus{
+  outline: none;
+}
+.check-box-wrap{
+  position: relative;
+  margin: 30px 0;
+  padding: 25px 25px 45px 50px;
+  border: none;
+  border-radius: 5px;
+  background-color: #fff;
+  font-weight: 700;
+  font-size: 0.8rem;
+}
+.check-box-wrap .input-check-wrap{
+  display: flex;
+}
+.check-box-wrap .input-check-wrap label{
+  margin-left: 10px;
+}
+.check-box-wrap input[type='checkbox']{
+  position: absolute;
+  width:20px;
+  height:20px;
+  margin-left: -35px;
+  margin-top: 1px;
+  border-radius: 5px;
+}
+.check-box-wrap .contact-mail,
+.check-box-wrap .data-info{
+  color: #000;
+}
+.check-box-wrap .data-claimer{
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  opacity: 0.8;
+  font-weight: 400;
+  margin: 0;
+}
+.form-conatiner form input[type='submit']{
+  max-width: 150px;
+  padding: 15px 35px;
+  border: none;
+  border-radius: 5px;
+  color: #fff;
+  background-color: #0A3479;
+  cursor: pointer;
 }
