--- a/styles.css
+++ b/styles.css
@@ -186,4 +186,26 @@ nav.top-sticky-nav a{
   color: #fff;
   background-color: #0A3479;
   cursor: pointer;
+  margin-bottom: 49px;
+}
+.alert-wrap{
+  position: relative;
+  margin-bottom: 5px;
+}
+.alert-box{
+  position: absolute;
+  top: -50px;  
+  background-color: #f44336;
+  color: #fff;
+  max-width: 250px;
+  padding: 15px 15px;
+  border-radius: 5px;
+  
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s, opacity 0.5s linear;
+}
+.visible{
+  visibility: visible;
+  opacity: 1;
 }
