--- a/styles.css
+++ b/styles.css
@@ -132,6 +132,19 @@ nav.top-sticky-nav a{
 .dropdown-list-open{
   display: block;
 }
+.arrow {
+  position: absolute;
+  right: 10px;
+  top: 40%;
+  border: solid black;
+  border-width: 0 1px 1px 0;
+  display: inline-block;
+  padding: 4px;
+}
+.down {
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+}
 /* check box styling */
 .check-box-wrap{
   position: relative;
